Mobile support! modified impress so that I can scroll down in a step without weirdness added css that on mobile will fix some of the margins and sizes accordingly

--- a/Content/meditations-impress.css
+++ b/Content/meditations-impress.css
@@ -41,3 +41,11 @@
     height: 96vh;
     margin: 0;
 }
+
+.impress-mobile #impress-container {
+    margin: 0;
+}
+
+.impress-mobile .step.slide {
+    height: 700px;
+}
